// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/custom_status/custom_status_text should match snapshot 1`] = `
<Text
  style={
    Object {
      "color": "rgba(61,60,64,0.5)",
      "flex": 1,
      "fontSize": 17,
      "includeFontPadding": false,
      "textAlignVertical": "center",
    }
  }
>
  In a meeting
</Text>
`;

exports[`components/custom_status/custom_status_text should match snapshot with empty text 1`] = `
<Text
  style={
    Object {
      "color": "rgba(61,60,64,0.5)",
      "flex": 1,
      "fontSize": 17,
      "includeFontPadding": false,
      "textAlignVertical": "center",
    }
  }
>
  
</Text>
`;
